# routers/router.go
@@ -46,6 +46,8 @@ func InitAPI() {
 
 	web.Router("/api/signup", &controllers.ApiController{}, "POST:Signup")
 	web.Router("/api/login", &controllers.ApiController{}, "POST:Login")
+	web.Router("/api/send-magic-link", &controllers.ApiController{}, "POST:SendMagicLink")
+	web.Router("/api/verify-magic-link", &controllers.ApiController{}, "GET:VerifyMagicLink")
 	web.Router("/api/get-app-login", &controllers.ApiController{}, "GET:GetApplicationLogin")
 	web.Router("/api/get-dashboard", &controllers.ApiController{}, "GET:GetDashboard")
 	web.Router("/api/get-dashboard-providers", &controllers.ApiController{}, "GET:GetDashboardProviderDistribution")
@@ -357,6 +359,9 @@ func InitAPI() {
 	web.Router("/api/reset-email-or-phone", &controllers.ApiController{}, "POST:ResetEmailOrPhone")
 	web.Router("/api/get-captcha", &controllers.ApiController{}, "GET:GetCaptcha")
 	web.Router("/api/get-verifications", &controllers.ApiController{}, "GET:GetVerifications")
+	web.Router("/api/get-magic-links", &controllers.ApiController{}, "GET:GetMagicLinks")
+	web.Router("/api/revoke-magic-link", &controllers.ApiController{}, "POST:RevokeMagicLink")
+	web.Router("/api/delete-magic-link", &controllers.ApiController{}, "POST:DeleteMagicLink")
 
 	web.Router("/api/get-ldap-users", &controllers.ApiController{}, "GET:GetLdapUsers")
 	web.Router("/api/get-ldaps", &controllers.ApiController{}, "GET:GetLdaps")
